# Enterprise_Feature_Store

./: .gitignore  Architecture.md  Issues_encountered.md  LICENSE  README.md  feature_registry.yaml  offline_materialization.py  pyproject.toml  registry_loader.py  requirements.txt  tasks.md
feature_pipeline/: run_feature_pipelines.py  user_activity_features.py  user_profile_features.py  user_review_features.py
feature_store/: feature_registry.yaml
feature_store/feature_pipeline/: churn_labels.py  user_activity_features.py  user_profile_features.py  user_review_features.py
notebooks/: data_synthesis.ipynb  model_training.ipynb
offline_store/: churn_labels.parquet  user_activity_features.parquet  user_profile_features.parquet
online_store/: online_store_setup.py  push_features_to_online_store.py
services/: feature_serving.py
